fixed theme padding bottom on mobile devices

--- a/assets/css/scss/_theme.scss
+++ b/assets/css/scss/_theme.scss
@@ -19,7 +19,7 @@
 
       @media screen and (max-width: $mobile-breakpoint) {
         min-height: unset;
-        padding: 4.5rem 0.625rem calc(20vh + 2rem);
+        padding: 4.5rem 0.625rem calc(20vh + 5rem);
         background-color: transparentize($navbar-background, 0.05);
       }
 
@@ -99,7 +99,7 @@
           display: flex;
           flex-flow: row;
           align-items: center;
-          gap: 1.5rem;
+          gap: 2rem;
         }
 
         a {
